tests/ui/async-await/in-trait/fn-not-async-err2.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in `impl` method return types
  --> $DIR/fn-not-async-err2.rs:13:22
   |
LL |     fn foo(&self) -> impl Future<Output = i32> {
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = help: add `#![feature(return_position_impl_trait_in_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
